--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -1,3 +1,5 @@
-<h1>This is the homepage</h1>
+<div class="center jumbotron">
+	<h1>VCSA</h1>
+	<%= link_to "Sign Up", "#", class: "btn btn-danger btn-lg btn-xlarge" %>
+</div>
 
-<%= link_to "Blog", articles_path %>
