--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -2,22 +2,40 @@
 <h2>Errors</h2>
 <ul>
 	<% @article.errors.full_messages.each do |msg| %>
-		<li><%= msg %></li>
+	<li><%= msg %></li>
 	<% end %>
 </ul>
 <% end %>
-<%= form_for @article do |f| %>
-	<p>
-		<%= f.label :title %> <br/>
-		<%= f.text_field :title %>
-	</p>
-	<p>
-	<%= f.label :description %> <br/>
-	<%= f.text_area :description %>
-	</p>
-	<p>
-	<%= f.submit %>
-	</p>
-<% end %>
 
-<%= link_to "Back to articles listing", articles_path %>
+<div class="row">
+	<div class="col-md-12">
+		<%= form_for(@article, :html => {class: "form-horizontal", role: "form"}) do |f| %>
+		<div class="form-group">
+			<div class="control-label col-md-2">
+
+				<%= f.label :title %>
+			</div>
+			<div class="col-md-8">
+				<%= f.text_field :title, class: "form-control", placeholder: "Title", autofocus: "true" %>
+			</div>
+		</div>
+		<div class="form-group">
+			<div class="control-label col-md-2">
+
+				<%= f.label :description %> 
+			</div>
+			<div class="col-md-8">
+				<%= f.text_area :description, rows: 10, class: "form-control", placeholder: "Body" %>
+			</div>
+		</div>
+		<div class="form-group">
+		<div class="col-md-offset-2 col-md-10">
+				<%= f.submit class: "btn btn-primary btn-lg" %>
+			</div>
+		</div>
+		<% end %>
+		<div class="col-md-4 col-md-offset-4">
+			[ <%= link_to "Cancel request and return to articles listing", articles_path %> ]
+		</div>
+	</div>
+</div>
