--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,11 +1,4 @@
-<% if @article.errors.any? %>
-<h2>Errors</h2>
-<ul>
-	<% @article.errors.full_messages.each do |msg| %>
-	<li><%= msg %></li>
-	<% end %>
-</ul>
-<% end %>
+<%= render 'shared/errors', obj: @article %>
 
 <div class="row">
 	<div class="col-md-12">
@@ -29,7 +22,7 @@
 			</div>
 		</div>
 		<div class="form-group">
-		<div class="col-md-offset-2 col-md-10">
+			<div class="col-md-offset-2 col-md-10">
 				<%= f.submit class: "btn btn-primary btn-lg" %>
 			</div>
 		</div>
