--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -38,6 +38,15 @@ $navbar-default-bg: #BA0300;
 	background-color: #BA0300;
 }
 
+.article-actions {
+	border-top: 1px solid #eaeaea;
+	padding-top: 5px;
+}
+
+.description {
+	margin-top: 0;
+}
+
 footer {
 	margin-top: 45px;
 	padding-top: 5px;
