--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,7 +1,14 @@
-<h1>Showing selected article</h1>
+<h2 align="center"> Title: <%= @article.title %></h2>
 
-<p> Title: <%= @article.title %></p>
-<p> Description: <%= @article.description %></p>
-
-<%= link_to "Edit this article", edit_article_path(@article) %> |
-<%= link_to "Back to articles listing", articles_path %>
+<div class="well col-md-8 col-md-offset-2">
+	<h4 class="center description"><strong>Description:</strong></h4>
+	<hr>
+	<%= simple_format(@article.description) %>
+	<div class="article-actions">
+		<%= link_to "Edit this article", edit_article_path(@article), class: "btn btn-md btn-primary" %>
+		<%= link_to "Delete this article", article_path(@article), method: :delete, 
+											data: {confirm: "are you sure you want to delete the articel?"}, 
+											class: "btn btn-md btn-danger" %>
+		<%= link_to "View all articles", articles_path, class: "btn btn-md btn-success" %>
+	</div>
+</div>
