--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -1,5 +1,5 @@
 <div class="center jumbotron">
-	<h1>VCSA</h1>
+	<h1>TEST</h1>
 	<%= link_to "Sign Up", "#", class: "btn btn-danger btn-lg btn-xlarge" %>
 </div>
 
