--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -38,6 +38,11 @@ $navbar-default-bg: #BA0300;
 	background-color: #BA0300;
 }
 
+.article-meta-details {
+	border-top: 2px solid #eaeaea;
+	margin-top: 15px;
+}
+
 .article-actions {
 	border-top: 1px solid #eaeaea;
 	padding-top: 5px;
